# ModCreater-CDDA

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
lang/: lang_zh.ts
res/: Resources.qrc
src/: CMakeLists.txt  MainCreater.cpp
src/Controller/: ModsController.cpp  ModsController.h
src/Model/: Bionics.cpp  Bionics.h  Material.cpp  Material.h  ModInfo.cpp  ModInfo.h
src/Utils/: json.hpp  macro.h
src/View/: MainWindow.cpp  MainWindow.h
ui/: Window.ui
