CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(ModCreater-CDDA)
SET(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# 配置Qt
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

# 查找Qt
FIND_PACKAGE(Qt5 REQUIRED Core Widgets)
FIND_PACKAGE(Qt5LinguistTools)

# Boost 配置
set(Boost_USE_STATIC_LIBS ON)  # only find static libs
set(Boost_USE_DEBUG_LIBS OFF) # ignore debug libs and
set(Boost_USE_RELEASE_LIBS ON)  # only find release libs
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system filesystem)

SET(CODE_PATH ${CMAKE_SOURCE_DIR}/src)
SET(RES_PATH ${CMAKE_SOURCE_DIR}/res)
SET(UI_PATH ${CMAKE_SOURCE_DIR}/ui)
SET(TEST_PATH ${CMAKE_SOURCE_DIR}/test)
SET(LANG_PATH ${CMAKE_SOURCE_DIR}/lang)

set(CMAKE_AUTOUIC_SEARCH_PATHS ${UI_PATH})

ADD_SUBDIRECTORY(${CODE_PATH})